<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/elron_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elron_logo" />

    <AutoCompleteTextView
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:completionThreshold="1"
        android:drawableEnd="@drawable/location"
        android:hint="@string/loc"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <AutoCompleteTextView
        android:id="@+id/etDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:drawableEnd="@drawable/location"
        android:hint="@string/dest"
        android:textSize="22sp"
        android:completionThreshold="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSwap" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSwap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/swap_button"
        android:onClick="onSwap"
        app:backgroundTint="@color/orange_500"
        app:fabCustomSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLocation"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/arrows"
        app:tint="@color/white" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:elevation="6dp"
        android:onClick="onSearch"
        android:text="@string/search_btn"
        android:textSize="22sp"
        app:cornerRadius="50dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalendar"
        app:layout_constraintEnd_toEndOf="@+id/etDestination"
        app:layout_constraintStart_toEndOf="@+id/btnCalendar" />

    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#505050"
        android:drawableEnd="@drawable/calendar"
        android:elevation="6dp"
        android:onClick="onCalendar"
        android:text="@string/date_filler"
        android:textSize="22sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/etDestination"
        app:layout_constraintTop_toBottomOf="@+id/etDestination" />

    <TextView
        android:id="@+id/txtHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Ajalugu"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/etDestination"
        app:layout_constraintTop_toBottomOf="@+id/btnCalendar" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/txtHistory"
        app:layout_constraintEnd_toEndOf="@+id/etDestination"
        app:layout_constraintStart_toStartOf="@+id/etDestination"
        app:layout_constraintTop_toBottomOf="@+id/txtHistory" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etDestination"
        app:layout_constraintStart_toStartOf="@+id/etDestination"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>